# GaaS

./: .gitignore  404.html  =5.0  AGENTS.md  CONTEXT.yaml  DECISIONS.md  README.md  config.yaml.bak  example.config.yaml  example.config.yml  example.secrets.yaml  install.sh  pyproject.toml  sitemap.xml
api/: index.html
app/: AGENTS.md  CONTEXT.yaml  chat.py  chat_routes.py  classify.py  cli.py  config.py  conversation_store.py  doctor.py  evaluate.py  github_store.py  human_log.py  llm.py  loader.py  mail.py  main.py  queue.py  queue_policy.py  result_routes.py  runtime_init.py  scheduler.py  setup.py  store.py  supervisor.py  worker.py
app/actions/: __init__.py  script.py
app/integrations/: AGENTS.md  __init__.py
app/integrations/email/: README.md  __init__.py  act.py  check.py  classify.py  collect.py  const.py  mail.py  manifest.yaml  store.py
app/integrations/email/templates/: classify_email.jinja
app/integrations/github/: README.md  __init__.py  act.py  check.py  classify_pr.py  client.py  collect.py  const.py  evaluate.py  manifest.yaml  store.py
app/integrations/github/templates/: classify_github_pr.jinja
app/tasks/: check_email.py  classify_email.py  classify_github_pr.py  collect_email.py
app/tasks/templates/: classify_email.jinja
app/templates/: action_prompt.jinja  config.yaml.jinja  secrets.yaml.jinja  wrapper.sh.jinja
app/ui/: presenters.py  routes.py  yaml_rw.py
app/ui/templates/: base.html  chat.html  config.html  dashboard.html  logs.html  queue.html  restart.html
app/ui/templates/components/: _badges.html  _config.html
app/ui/templates/partials/: _directories_section.html  _error.html  _integration_header.html  _llm_section.html  _scripts_section.html
architecture/human-log/: index.html
architecture/overview/: index.html
architecture/safety-model/: index.html
architecture/web-ui/: index.html
code-quality-tools/: index.html
design/: index.html
development/: index.html
docs/: AGENTS.md  api.md  code-quality-tools.md  design.md  development.md  why.md
docs/architecture/: human-log.md  overview.md  safety-model.md  web-ui.md
docs/testing/: guide.md  philosophy.md
gaas-bot/: DECISIONS.md  README.md
gaas-bot/src/gaas_bot/: cli.py
gaas-bot/src/gaas_bot/commands/: review.py
gaas-bot/src/gaas_bot/core/: git.py  github.py
gaas-bot/src/gaas_bot/models/: review.py
gaas-bot/src/gaas_bot/templates/: review_analyze.md.j2  review_draft.md.j2  review_review.md.j2
gaas-bot/tests/: test_cli.py  test_models.py  test_review.py  test_templates.py
scripts/: refactor_audit.py  refactor_audit_prompt.md.j2
search/: search_index.json
testing/guide/: index.html
testing/philosophy/: index.html
tests/: AGENTS.md  CONTEXT.yaml  conftest.py  test_actions.py  test_chat.py  test_chat_routes.py  test_cli.py  test_config.py  test_conversation_store.py  test_llm.py  test_loader.py  test_queue.py  test_queue_policy.py  test_result_routes.py  test_scheduler.py  test_sdk.py  test_services.py  test_store.py  test_supervisor.py  test_ui_presenters.py  test_ui_routes.py  test_ui_snapshots.py  test_ui_visual.py  test_worker.py  test_yaml_rw.py
tests/__snapshots__/: test_ui_snapshots.ambr
tests/integrations/email/: test_act.py  test_classify.py  test_email_store.py  test_mail_parsing.py
tests/safety/: test_automation_invariants.py  test_chaos.py  test_provenance.py
why/: index.html
