[project]
name = "gaas"
version = "0.1.0"
description = "AI-powered personal assistant — email, PRs, issues, safely"
requires-python = ">=3.11"
dependencies = [
    "gaas-sdk",
    "gaas-email",
    "gaas-github",
    "fastapi[standard]>=0.129.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.23",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
    "fastapi-crons>=0.2",
    "complexipy>=5.2.0",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
gemini = ["gaas-gemini"]

[project.scripts]
gaas = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.uv.sources]
gaas-sdk = { path = "packages/gaas-sdk", editable = true }
gaas-email = { path = "packages/gaas-email", editable = true }
gaas-github = { path = "packages/gaas-github", editable = true }
gaas-gemini = { path = "packages/gaas-gemini", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages/gaas-email/tests", "packages/gaas-gemini/tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
